# fullstack_unwinddigital_task

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  create_database.py  entrypoint.sh  pyproject.toml
backend/src/: api.py  crud.py  events.py  main.py  services.py  settings.py  tasks.py
backend/src/db/: dependencies.py  events.py  models.py  utils.py
backend/src/queries/: queries.pyi
backend/src/queries/sql/: queries.sql
backend/tests/: test_aiosql.py
frontend/: Dockerfile  entrypoint.sh  package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: Graph.js  Header.js  Table.js  TotalSum.js
